<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">G Logger</string>
    <string name="action_settings">Settings</string>
    <string name="capturing">Capturing</string>
    <string name="start_capturing">Start</string>
    <string name="stop_capturing">Stop</string>
    <string name="pause_capturing">Pause</string>
    <string name="title_activity_log_viewer">LogViewerActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="reset">Reset</string>

</resources>