<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CapturingActivity" >

    <TextView
        android:id="@+id/logger_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="" />

    <TextView
        android:id="@+id/capturing_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/start_capturing_button"
        android:layout_alignParentLeft="true"
        android:text="@string/capturing"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/start_capturing_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/start_capturing" />

    <Button
        android:id="@+id/stop_capturing_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/start_capturing_button"
        android:layout_alignBottom="@+id/start_capturing_button"
        android:layout_alignRight="@+id/logger_text"
        android:text="@string/stop_capturing" />

    <Button
        android:id="@+id/pause_capturing_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/start_capturing_button"
        android:layout_toRightOf="@+id/start_capturing_button"
        android:text="@string/pause_capturing" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/stop_capturing_button"
        android:layout_alignBottom="@+id/stop_capturing_button"
        android:layout_toLeftOf="@+id/stop_capturing_button"
        android:text="@string/reset" />

</RelativeLayout>